--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,49 @@ body {
   background: var(--mainWhite);
   color: var(--mainBlack);
 }
+
+/*nav-links*/
+  .navbar-toggler{
+    outline: none !important;
+  }
+
+  .toggler-icon{
+    font-size: 2.5rem;
+    color: var(--mainPink )
+  }
+
+  .nav-link{
+    color: var(--mainPink);
+    transition: all .5s ease-in-out;
+    font-size: 1.5rem;
+  }
+
+  .nav-link:hover{
+    color:var(--mainBlack);
+  }
+
+
+/*cart*/
+  .cart-info-icon{
+    color: var(--mainBlack);
+    cursor: pointer;
+  }
+
+  .cart-info{
+    border: .1rem solid var(--mainBlack);
+    color: var(--mainBlack);
+    border-radius: .25rem;  
+    padding: .4rem .6rem;
+    cursor: pointer;  
+  }
+
+  .cart-info:hover{
+    background: var(--mainPink);
+    color: var(--mainWhite);
+    border-color: var(--mainPink);
+  }
+
+  .cart-info:hover .cart-info-icon{
+    color: var(--mainWhite);
+  }
+
