--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,35 @@ body {
     color: var(--mainWhite);
   }
 
+/*banner*/
+  .max-height{
+    min-height: calc(100vh - 76px);
+    background: linear-gradient(var(--yellowTrans),var(--yellowTrans)), url("../img/headerBcg.jpeg");
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    position: relative;
+
+  }
+
+  .banner{
+    color:var(--mainWhite);
+    margin-top: -4rem;  
+  }
+
+  .banner-title{
+    color: var(--mainPink);
+    font-size: 4rem;
+  }
+
+  .banner-link{
+    color: var(--mainBlack);
+    font-size: 1.5rem;
+    border: .2rem solid var(--mainBlack);
+  }
+
+  .banner-link:hover{
+    background-color: var(--mainBlack);
+    color: var(--mainPink);
+  }
