--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,18 @@ body {
   color: var(--mainBlack);
 }
 
+/*global styles*/
+  .btn-black{
+    color: var(--mainBlack) !important; 
+    border-color: var(--mainBlack) !important;
+
+  }
+
+  .btn-black:hover{
+    color: var(--mainPink) !important;
+    background: var(--mainBlack) !important;
+  }
+
 /*nav-links*/
   .navbar-toggler{
     outline: none !important;
@@ -34,7 +46,6 @@ body {
   .nav-link:hover{
     color:var(--mainBlack);
   }
-
 
 /*cart*/
   .cart-info-icon{
@@ -92,3 +103,24 @@ body {
     background-color: var(--mainBlack);
     color: var(--mainPink);
   }
+
+
+.about-img-container {
+  position: relative;
+}
+.about-img-container::before {
+  content: "";
+  position: absolute;
+  top: -1.5rem;
+  left: -1.7rem;
+  width: 100%;
+  height: 100%;
+  outline: 0.5rem solid rgb(249, 228, 148);
+  z-index: -1;
+  transition: all 1s linear;
+}
+
+.about-img-container:hover:before {
+  top: 0;
+  left: 0;
+}
