--- a/css/style.css
+++ b/css/style.css
@@ -104,23 +104,33 @@ body {
     color: var(--mainPink);
   }
 
+/*about*/
+  .about-img-container {
+    position: relative;
+  }
+  .about-img-container::before {
+    content: "";
+    position: absolute;
+    top: -1.5rem;
+    left: -1.7rem;
+    width: 100%;
+    height: 100%;
+    outline: 0.5rem solid rgb(249, 228, 148);
+    z-index: -1;
+    transition: all 1s linear;
+  }
 
-.about-img-container {
-  position: relative;
-}
-.about-img-container::before {
-  content: "";
-  position: absolute;
-  top: -1.5rem;
-  left: -1.7rem;
-  width: 100%;
-  height: 100%;
-  outline: 0.5rem solid rgb(249, 228, 148);
-  z-index: -1;
-  transition: all 1s linear;
-}
+  .about-img-container:hover:before {
+    top: 0;
+    left: 0;
+  }
 
-.about-img-container:hover:before {
-  top: 0;
-  left: 0;
-}
+/*store*/
+  .store{
+    background: var(--mainGrey);
+  }
+
+  .search-box{
+    background: var(--mainPink);
+    color: var(--mainBlack);
+  }
