--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,47 @@ body {
     background: var(--mainPink);
     color: var(--mainBlack);
   }
+
+  .store-img-container{
+    position: relative;
+    overflow: hidden;
+  }
+
+  .store-img{
+    transition: all .5s ease-in-out;
+
+  }
+  .store-img-container:hover .store-img{
+    transform: scale(1.3);
+  }
+
+  .shopping-item-icon{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding: .75rem;
+    background: var(--mainYellow);
+    border-top-left-radius: 1rem;
+    transform: translate(100%,100%);
+    transition: all .5s ease-in-out;
+
+  }
+
+  .store-img-container:hover .shopping-item-icon{
+    transform: translate(0,0);
+  }
+
+  .shopping-item-icon:hover{
+    color: var(--mainWhite);
+  }
+
+  .store-card{
+    cursor: pointer;
+  }
+
+  .store-card:hover{
+    box-shadow: 0px 15px 15px var(--mainBlack);
+  }
+
+
+
