--- a/css/style.css
+++ b/css/style.css
@@ -176,5 +176,15 @@ body {
     box-shadow: 0px 15px 15px var(--mainBlack);
   }
 
+/*services*/
+  .services{
+    background: linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,.5)),url('../img/servicesBcg.jpeg') center/cover fixed no-repeat;
+  }
 
+  .service-title{
+    letter-spacing:.5rem;
+  }
 
+  .service-text{
+    word-spacing: .2rem;
+  }
