Added footer and css

--- a/css/style.css
+++ b/css/style.css
@@ -198,3 +198,33 @@ body {
   .service-text{
     word-spacing: .2rem;
   }
+
+
+/*footer*/
+  .footer-logo{
+    background: var(--mainBlack);
+  }
+
+  .footer-contact{
+    background: var(--mainGrey);
+  }
+
+  .footer-logo-text{
+    color: var(--mainPink);
+    font-size: 4rem;
+  }
+
+  .footer-icon{
+    color: var(--mainWhite);
+    font-size: 1.5rem;
+  }
+
+  .footer-icon:hover{
+    color: var(--mainPink);
+    font-size: 1.5rem;
+  }
+
+  .footer-contact-icon{
+    color: var(--mainWhite);
+    font-size: 1.5rem;
+  }
